<resources>
    <string name="app_name">Palos Lanes</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="my_account">My Account</string>
    <string name="menu_home">Home</string>
    <string name="HeaderIMG">Palos Lanes Header</string>
    <string name="Username">Enter Desired Username</string>
    <string name="UsernameLogin">Enter Username</string>
    <string name="Password">Enter Password</string>
    <string name="checkRemember">Remember Me</string>
    <string name="Login">Login</string>
    <string name="NewAccount">Don\'t have an account with us?</string>
    <string name="RegisterHere">Register Here</string>
    <string name="SubHeaderSign">Please fill out this form below to create an account!</string>

    //Key value pairs for shared preferences
    <string name="CheckboxSave">com.example.paloslanesapp.CheckboxSave</string>
    <string name="UsernameSave">com.example.paloslanesapp.UserSave</string>
    <string name="PasswordSave">com.example.paloslanesapp.PasswordSave</string>
    <string name="AuthToken">com.example.paloslanesapp.AuthToken</string>
    <string name="AccessLevel">com.example.paloslanesapp.AccessLevel</string>
    <string name="PointsSave">com.example.paloslanesapp.PointsSave</string>
    <string name="FirstSave">com.example.paloslanesapp.FirstSave</string>
    <string name="LastSave">com.example.paloslanesapp.LastSave</string>
    <string name="BirthdaySave">com.example.paloslanesapp.BirthdaySave</string>
    <string name="EmailSave">com.example.paloslanesapp.EmailSave</string>
    <string name="LeagueSave">com.example.paloslanesapp.LeagueSave</string>
    <string name="PhoneSave">com.example.paloslanesapp.PhoneSave</string>

    <string name="Birth">Birthdate:</string>
    <string name="Email">Email:</string>
    <string name="EmailExample">Bowling123@yahoo.com</string>
    <string name="ExampleFirst">John</string>
    <string name="ExampleLast">Doe</string>
    <string name="FirstN">First Name:</string>
    <string name="LastN">Last Name:</string>
    <string name="PhoneN">Phone:</string>
    <string name="ExamplePhone">708&#8211;123&#8211;1234</string>
    <string name="HeaderSign">CREATE ACCOUNT</string>
    <string name="LeagueMem">Are you a current league member?</string>
    <string name="RecoverPass">Please enter your email address:</string>
    <string name="CheckYes">Yes</string>
    <string name="CheckNo">No</string>
    <string name="SubHead">CREATE CREDENTIALS</string>
    <string name="NewUser">Username:</string>
    <string name="NewPass">Password:</string>
    <string name="ConfirmPass">Confirm:</string>
    <string name="ConPassExample">Enter Password Again</string>
    <string name="btnSub">Submit</string>
    <string name="NavStandings">League Standings</string>
    <string name="NavSignUp">League Sign Up</string>
    <string name="menu_coupons">Coupons</string>
    <string name="Nav_Loyalty">Loyalty/Rewards</string>
    <string name="title_activity_coupons_page">CouponsPage</string>
    <string name="menu_gallery">Gallery</string>
    <string name="BirthExample">03/29/1993</string>
    <string name="ForgotPassButton">Forgot Password?</string>
    <string name="BtnRequest">Send Email</string>
    <string name="BtnAddPoints">Manage Points</string>
    <string name="BtnCoupon">Scan Coupon</string>
    <string name="AdminTitle">Manage Points</string>
    <string name="AdminTitle2">Scan Coupons</string>
    <string name="AdminContent">Add points:\nper game paid = +100pts\n\nSubtract points:\nper game redeemed = -500pts\n\n**Guests will not receive points for games redeemed with points or coupons**</string>
    <string name="AdminContent2">Scan coupons\n\nEach coupon will be worth one game per customer\n\n**Coupons will refresh for all users every Monday morning**</string>
    <string name="SwitchLoyalty">  ADD</string>
    <string name="SwitchLoyalty2">REDEEM</string>
    <string name="BtnGenerate">Generate Code</string>
    <string name="Dialogue">Please select the number of points to add!</string>
    <string name="Dialogue2">Please select the number of games to redeem!</string>
    <string name="WelcomeMessage">Welcome,</string>
    <string name="HomeContent">BOWL AND REDEEM</string>
    <string name="Specials">SPECIALS</string>
    <string name="ButtonContent">Home image button</string>
    <string name="SlideshowContent">Specials slideshow</string>
    <string name="QRcodeContent">QR Code</string>
    <string name="CouponContent">BOGO Coupon</string>
    <string name="ButtonRefresh">REFRESH POINTS</string>
    <string name="PinContent">Account page logo pin</string>
    <string name="CouponHeader">Bowling Coupons</string>
    <string name="Hours">Open Bowling Hours</string>
    <string name="Monday">Monday: 9am - Midnight</string>
    <string name="Tuesday">Tuesday: 9am - 5pm and 9:30pm - Midnight</string>
    <string name="Wednesday">Wednesday: 9am - 5pm and 9:30pm - Midnight</string>
    <string name="Thursday">Thursday: 9am - Midnight</string>
    <string name="Friday">Friday: 9am - 5pm and 9:30pm - Midnight</string>
    <string name="Saturday">Saturday: 9am - 4pm and 9pm - Midnight</string>
    <string name="Sunday">Sunday: 9am - Midnight</string>
    <string name="CallUs">**Hours may vary. Please call us for availability!**</string>
    <string name="Logout">Logout</string>
    <string name="CouponsError">Coupon image error</string>
    <string name="MaskingUnit">Masking Unit</string>
    <string name="MapHeader">Find Us</string>
    <string name="menuEvent">Event Packages</string>
    <string name="CouponRefresh">REFRESH COUPONS</string>
    <string name="PartyInfo">Please call us at 708-974-3200 for availability!</string>
    <string name="PrivacyPolicy">Privacy Policy</string>

</resources>
